<resources>
    <string name="app_name">igloo</string>
    <string name="my_items">My Items</string>
    <string name="condiments">Condiments</string>
    <string name="dairy">Dairy</string>
    <string name="drinks">Drinks</string>
    <string name="freezer">Freezer</string>
    <string name="meats">Meats</string>
    <string name="produce">Produce</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="grocery_list">Grocery List</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="search_recipes">Search for recipes…</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="total_time">Total time:</string>
    <string name="cuisine_type">Cuisine type:</string>
    <string name="diet_type">Diet type:</string>
    <string name="serving_size">Serving size:</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="members">Members</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="account_name">Account Name</string>
    <string name="notifications">Notifications</string>
    <string name="item_name">Item Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="date">date</string>
    <string name="owner">Owner:</string>
    <string name="owner_name">Name</string>
    <string name="request_item">Request to Borrow</string>
    <string name="add_shopping">Add to Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="item_name_form">Item Name:</string>
    <string name="quantity_form">Quantity:</string>
    <string name="new_item">Add New Item</string>
    <string name="add_image">Add Image</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="fridge_members">Fridge Members</string>
    <string name="member_name">Member Name</string>
    <string name="questions">Question</string>
    <string name="answer">Answer</string>
    <string name="scan_button">Scan</string>
    <string name="notification_body"><u>Notification Body</u></string>
    <string name="recipes_query">Recipes containing:</string>
    <string name="search_recipe_button">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="signin_prompt">Sign in</string>
    <string name="signin"><u>Sign in</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="signup_prompt">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="shopping_add_item">Add shopping list item</string>
    <string name="share_with">Share Item With:</string>
    <string name="shared_with">Shared With:</string>
    <string name="category">Category:</string>
    <string name="enter_item">Enter tem name</string>
    <string name="enter_quantity">Enter quantity amount</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="none">None</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="save_item">Save Item</string>
    <string name="viewpager">This is used to display shared fridges</string>
    <string name="default_web_client_id">938243713874-9iik8hlaoikc60pdpv6glich1gek2a9d.apps.googleusercontent.com</string>
    <string name="my_friends">MY FRIENDS</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="about1">Welcome to igloo! igloo is a mobile application that allows users to keep track of all the items in their fridge. This app is a useful tool to help users reduce food waste and simplify the process of planning meals based on the ingredients they have on hand.</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission">At igloo, we\'re on a mission to empower users to take control of their fridge contents, reduce food waste, and make meal planning effortless. We believe that by harnessing the power of technology, we can revolutionize the way people manage their food inventory and contribute to a more sustainable world.</string>
</resources>