<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.InventoryDisplayFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/my_items"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:padding="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/secondary_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/secondary_color">

            <ImageButton
                android:id="@+id/left_arrow"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.1"
                android:src="@drawable/left_arrow"
                android:background="@color/secondary_color"
                android:contentDescription="@string/previous"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.8"
                android:background="@color/secondary_color"
                app:layout_constraintStart_toEndOf="@id/left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/viewpager"/>

            <ImageButton
                android:id="@+id/right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.1"
                android:src="@drawable/right_arrow"
                android:background="@color/secondary_color"
                android:contentDescription="@string/next"
                app:layout_constraintStart_toEndOf="@id/view_pager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_items" />

</androidx.constraintlayout.widget.ConstraintLayout>